tests/Checker.txt
-- Empty string: succeeds without progressing
x = ""
----------
List x = ""...
  Rule x = "" SN
    Id x SN
    Success "" SN
  Empty
==========
-- Empty set: fails without progressing
x = ''
----------
List x = ''...
  Rule x = '' FN
    Id x FN
    Fail '' FN
  Empty
==========
-- Character code: succeeds and progresses or fails without progressing
x = '\42'
----------
List x = '\42'...
  Rule x = '\42' FN,SP
    Id x FN,SP
    Char '\42' FN,SP
  Empty
==========
-- Strings: FN,SP
x = "a" "ab"
----------
List x = "a" "ab"...
  Rule x = "a" "ab" FN,SP,FP
    Id x FN,SP,FP
    And "a" "ab" FN,SP,FP
      Char "a" FN,SP
      Text "ab" FN,SP
  Empty
==========
-- Sets: SP or FN
x = 'a' 'ab'
----------
List x = 'a' 'ab'...
  Rule x = 'a' 'ab' FN,SP,FP
    Id x FN,SP,FP
    And 'a' 'ab' FN,SP,FP
      Char 'a' FN,SP
      Set 'ab' FN,SP
  Empty
==========
-- Empty string then empty string: SN
x = "" ""
----------
List x = "" ""...
  Rule x = "" "" SN
    Id x SN
    And "" "" SN
      Success "" SN
      Success "" SN
  Empty
==========
-- Normal rule without recursion
x = 'a'
----------
List x = 'a'...
  Rule x = 'a' FN,SP
    Id x FN,SP
    Char 'a' FN,SP
  Empty
==========
-- Simple left recursive rule
x = x 'a'
----------
Error in tests/Checker.txt, line 71: potential infinite loop
x = x 'a'
^
==========
-- Mutual recursion
x = y "abc"
z = "123"
y = x "ABC"
----------
Error in tests/Checker.txt, line 78: potential infinite loop
x = y "abc"
^
==========
-- Mutual recursion masked by optional expression
x = "a" ? y
y = "A" ? x "ABC"
----------
Error in tests/Checker.txt, line 87: potential infinite loop
x = "a" ? y
^
==========
-- Mutual recursion masked by remote optional expression
x = a y
z = "123"
y = "A" ? x "ABC"
a = b
b = c
c = "a" ?
----------
Error in tests/Checker.txt, line 95: potential infinite loop
x = a y
^
==========
-- Text input and token input
x = [%a] 'b'
----------
Error in tests/Checker.txt, line 107: text matcher in a token parser
x = [%a] 'b'
         ^^^
==========
-- See: FN,SP,FP
x = [%a] %b
----------
List x = [%a] %b... TI
  Rule x = [%a] %b FN,SP,FP
    Id x FN,SP,FP
    And [%a] %b FN,SP,FP
      See [%a] FN,SP
        Tag %a FN,SP
      Tag %b FN,SP
  Empty
==========
-- Positive lookahead: SN,FN
x = (%a)& %b
----------
List x = (%a)& %b... TI
  Rule x = (%a)& %b FN,SP
    Id x FN,SP
    And (%a)& %b FN,SP
      Has (%a)& SN,FN
        Tag %a FN,SP
      Tag %b FN,SP
  Empty
==========
-- Negative lookahead: SN,FN
x = (%a)! %b
----------
List x = (%a)! %b... TI
  Rule x = (%a)! %b FN,SP
    Id x FN,SP
    And (%a)! %b FN,SP
      Not (%a)! SN,FN
        Tag %a FN,SP
      Tag %b FN,SP
  Empty
==========
-- Action on left of choice (legal now, but warn when compiling)
x = @a 'a' / 'b'
----------
List x = @a 'a' / 'b'...
  Rule x = @a 'a' / 'b' FN,SP,AA,AB
    Id x FN,SP,AA,AB
    Or @a 'a' / 'b' FN,SP,AA,AB
      And @a 'a' FN,SP,AA,AB
        Act @a SN,AA,AB
        Char 'a' FN,SP
      Char 'b' FN,SP
  Empty
==========
-- Expression which succeeds without progressing, repeated in an infinite loop
x = (@a @2b)*
----------
Error in tests/Checker.txt, line 163: potential infinite loop
x = (@a @2b)*
^
==========
-- Check the EE flag
x = #m
y = #m 'a'
z = ('a' #m 'b')&
----------
List x = #m...
  Rule x = #m SN,EE
    Id x SN,EE
    Mark #m SN,EE
  Rule y = #m 'a' FN,SP,EE
    Id y FN,SP,EE
    And #m 'a' FN,SP,EE
      Mark #m SN,EE
      Char 'a' FN,SP
  Rule z = ('a' #m 'b')& SN,FN
    Id z SN,FN
    Has ('a' #m 'b')& SN,FN
      And 'a' #m 'b' FN,SP,FP,EE
        Char 'a' FN,SP
        Mark #m SN,EE
        Char 'b' FN,SP
  Empty
==========
-- Expressions
exp = term ('+' term @2add / '-' term @2sub)* 'eof'
term = factor ('*' factor @2mul / '/' factor @2div)*
factor = primary ('^' factor @2pow)?
primary = 'number' @number / '(' exp ')'
----------
List exp = term ('+' term @2add / '-' term @2sub)* 'eof'...
  Rule exp = term ('+' term @2add / '-' term @2sub)* 'eof' FN,SP,FP,AA
    Id exp FN,SP,FP,AA
    And term ('+' term @2add / '-' term @2sub)* 'eof' FN,SP,FP,AA
      Id term FN,SP,FP,AA
      Any ('+' term @2add / '-' term @2sub)* SN,SP,FP,AA
        Or '+' term @2add / '-' term @2sub FN,SP,FP,AA
          And '+' term @2add FN,SP,FP,AA
            Char '+' FN,SP
            Id term FN,SP,FP,AA
            Act @2add SN,AA,AB
          And '-' term @2sub FN,SP,FP,AA
            Char '-' FN,SP
            Id term FN,SP,FP,AA
            Act @2sub SN,AA,AB
      Set 'eof' FN,SP
  Rule term = factor ('*' factor @2mul / '/' factor @2div)* FN,SP,FP,AA
    Id term FN,SP,FP,AA
    And factor ('*' factor @2mul / '/' factor @2div)* FN,SP,FP,AA
      Id factor FN,SP,FP,AA
      Any ('*' factor @2mul / '/' factor @2div)* SN,SP,FP,AA
        Or '*' factor @2mul / '/' factor @2div FN,SP,FP,AA
          And '*' factor @2mul FN,SP,FP,AA
            Char '*' FN,SP
            Id factor FN,SP,FP,AA
            Act @2mul SN,AA,AB
          And '/' factor @2div FN,SP,FP,AA
            Char '/' FN,SP
            Id factor FN,SP,FP,AA
            Act @2div SN,AA,AB
  Rule factor = primary ('^' factor @2pow)? FN,SP,FP,AA
    Id factor FN,SP,FP,AA
    And primary ('^' factor @2pow)? FN,SP,FP,AA
      Id primary FN,SP,FP,AA
      Opt ('^' factor @2pow)? SN,SP,FP,AA
        And '^' factor @2pow FN,SP,FP,AA
          Char '^' FN,SP
          Id factor FN,SP,FP,AA
          Act @2pow SN,AA,AB
  Rule primary = 'number' @number / '(' exp ')' FN,SP,FP,AA
    Id primary FN,SP,FP,AA
    Or 'number' @number / '(' exp ')' FN,SP,FP,AA
      And 'number' @number FN,SP,AA
        Set 'number' FN,SP
        Act @number SN,AA,AB
      And '(' exp ')' FN,SP,FP,AA
        Char '(' FN,SP
        Id exp FN,SP,FP,AA
        Char ')' FN,SP
  Empty
